@@ -1,6 +1,6 @@
 Current Version: @@VERSION@@
 
-ctags-5.5 (Mon Mar 10 2003)
+ctags-5.5 (Sat Mar 29 2003)
 * Changed kind indicator for methods from 'f' to 'm' [Tcl].
 * Changed tags within interfaces to be disabled by default (like prototypes in
   C/C++) [Fortran].
@@ -33,6 +33,7 @@ ctags-5.5 (Mon Mar 10 2003)
 * Fixed problem of empty scoping extension field [C, Bug #639644].
 * Fixed missing tags for functions split across lines [PHP, Bug #681824].
 * Fixed missing tags for nested subprograms using 'contains' [Fortran, Bug #670433].
+* Fixed missing tags when variable has same name as keyword [Fortran].
 * Fixed spurious tag when an array-spec occurs within an entity-decl [Fortran].
 * Fixed missing scope extension field on namespaces [C++, C#, Bug #665086].
 * Fixed several bugs causing missed tags [Fortran].
